--- a/app.css
+++ b/app.css
@@ -30,3 +30,15 @@ h1 {
     color: yellow;
   }
 }
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 4em;
+  }
+}
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 3em;
+  }
+}
