--- a/app.css
+++ b/app.css
@@ -8,8 +8,16 @@ h1 {
 }
 nav {
   font-size: 1.5em;
+  display: flex;
+  justify-content: space-between;
 }
 
+ul {
+  border: 1px solid red;
+  flex: 1;
+  max-width: 50%;
+  display: flex;
+}
 ul,
 li {
   display: inline;
