--- a/app.css
+++ b/app.css
@@ -12,19 +12,17 @@ nav {
   justify-content: space-between;
 }
 
-ul {
-  border: 1px solid red;
-  flex: 1;
-  max-width: 50%;
-  display: flex;
-  justify-content: space-evenly;
-}
-
 ul,
 li {
   display: inline;
   margin: 0;
   padding: 0;
+}
+ul {
+  flex: 1;
+  max-width: 50%;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 h1 {
@@ -44,6 +42,11 @@ h1 {
 @media (max-width: 768px) {
   h1 {
     font-size: 4em;
+  }
+  nav,
+  nav ul {
+    flex-direction: column;
+    align-items: center;
   }
 }
 
